--- a/tugas1-html-051mym/Home.html
+++ b/tugas1-html-051mym/Home.html
@@ -1,41 +1,43 @@
- <!DOCTYPE html>
- <html>
+<!DOCTYPE html>
+<html lang="id">
  <head>
- 	<title>Tugas 1 || P Web D</title>
+  <meta charset="UTF-8">
+ 	<title>Tugas 1 P Web D</title>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
  </head>
  <body>
- <center><img src="ftif.jpg" width="350" height="250" ></center>
- <center>
- <table border="4" width="600" height="200" >
+  
+  <img style="width: 350px; height: 250px;" src="ftif.jpg" alt="FTIF" >
+ 
+ <table style="border: 4px solid black; width: 600px; height: 200px;">
  	<tr>
- 		<th>Departemen</th>
- 		<th>Program Kuliah</th>
+ 		<th style="border: 1px solid black;" >Departemen</th>
+ 		<th style="border: 1px solid black;">Program Kuliah</th>
  	</tr>
  	<tr>
- 		<td>	Sistem Informasi</td>
- 		<td>
+ 		<td style="border: 1px solid black;">	Sistem Informasi</td>
+ 		<td style="border: 1px solid black;">
  				S1 Sistem Informasi<br>
  				S2 Sistem Informasi<br>
  		</td>
  	</tr>
  	<tr>
- 		<td>	Informatika</td>
- 		<td>
+ 		<td style="border: 1px solid black;">	Informatika</td>
+ 		<td style="border: 1px solid black;">
  				Program Sarjana (S1)<br>
  				Program Pasca Sarjana (S2)<br>
  				Program Doktor (S3)<br>
  		</td>
  	</tr>
- 	 <tr>
- 		<td>	Teknologi Informasi</td>
- 		<td>
+ 	 <tr >
+ 		<td style="border: 1px solid black;">	Teknologi Informasi</td>
+ 		<td style="border: 1px solid black;">
  				S1 Teknologi Informasi <br>
  		</td>
  	</tr>
  </table>
- </center>
- <h1>Formulir</h1>
- <form ">
+ <h1 style="padding: 30px;">Formulir</h1>
+ <form style="padding: 30px;">
   Nama :<br>
   <input type="text" name="name"><br>
   Asal Sekolah :<br>
@@ -56,8 +58,8 @@
 	</textarea><br>
   <input type="submit" value="Submit">
  </form>
- <hr color="black" size="5">
- <hr color="black" size="2">
+ <hr style="color: red;">
+ <hr style="color: black;">
  <p><b>Info : </b></p>
  <a href="https://www.its.ac.id/si/"> Departemen Sistem Informasi </a><br>
  <a href="https://www.its.ac.id/informatika"> Departemen Informatika </a><br>
